--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@picocss/pico": "^1.5.10",
     "@types/bootstrap": "^5.2.8",
+    "@types/lodash": "^4.14.200",
+    "@types/react-datepicker": "^4.19.1",
     "bootstrap": "^5.3.2",
+    "date-fns": "^2.30.0",
+    "lodash-es": "^4.17.21",
     "next": "13.5.6",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
+    "react-calendar": "^4.6.1",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
