--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "react-calendar": "^4.6.1",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.6",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "typescript": "^5"
