--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "postbuild": "next-sitemap",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -16,6 +17,7 @@
     "date-fns": "^2.30.0",
     "lodash-es": "^4.17.21",
     "next": "13.5.6",
+    "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
     "react-calendar": "^4.6.1",
