--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@picocss/pico": "^1.5.10",
     "@types/react-datepicker": "^4.19.1",
+    "@types/styled-components": "^5.1.34",
+    "copy-to-clipboard": "^3.3.3",
     "date-fns": "^2.30.0",
     "lodash-es": "^4.17.21",
     "next": "13.5.6",
@@ -21,6 +23,8 @@
     "react-datepicker": "^4.21.0",
     "react-dom": "^18",
     "recoil": "^0.7.7",
+    "styled-components": "^6.1.3",
+    "styled-reset": "^4.5.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
