--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
   },
   "dependencies": {
     "@picocss/pico": "^1.5.10",
-    "@types/bootstrap": "^5.2.8",
     "@types/react-datepicker": "^4.19.1",
-    "bootstrap": "^5.3.2",
+    "@types/styled-components": "^5.1.34",
+    "copy-to-clipboard": "^3.3.3",
     "date-fns": "^2.30.0",
     "lodash-es": "^4.17.21",
     "next": "13.5.6",
     "next-sitemap": "^4.2.3",
     "react": "^18",
-    "react-bootstrap": "^2.9.1",
     "react-calendar": "^4.6.1",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18",
     "recoil": "^0.7.7",
+    "styled-components": "^6.1.3",
+    "styled-reset": "^4.5.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
