--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@picocss/pico": "^1.5.10",
     "@types/react-datepicker": "^4.19.1",
     "@types/styled-components": "^5.1.34",
+    "babel-plugin-styled-components": "^2.1.4",
     "copy-to-clipboard": "^3.3.3",
     "date-fns": "^2.30.0",
     "lodash-es": "^4.17.21",
@@ -23,6 +24,7 @@
     "react-datepicker": "^4.21.0",
     "react-dom": "^18",
     "recoil": "^0.7.7",
+    "sharp": "^0.33.1",
     "styled-components": "^6.1.3",
     "styled-reset": "^4.5.1",
     "uuid": "^9.0.1"
