--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "copy-to-clipboard": "^3.3.3",
     "date-fns": "^2.30.0",
     "lodash-es": "^4.17.21",
-    "next": "13.5.6",
+    "next": "^14.2.5",
     "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-calendar": "^4.6.1",
