[dev/salary] staging

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash-es": "^4.17.21",
     "next": "^14.2.5",
     "next-sitemap": "^4.2.3",
+    "numeral": "^2.0.6",
     "react": "^18",
     "react-calendar": "^4.6.1",
     "react-datepicker": "^4.21.0",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@types/lodash-es": "^4.17.10",
     "@types/node": "^20",
+    "@types/numeral": "^2.0.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.6",
