--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-datepicker": "^4.21.0",
     "react-dom": "^18",
     "react-modal": "^3.16.1",
+    "react-scroll-sync": "^0.11.2",
     "recoil": "^0.7.7",
     "sharp": "^0.33.1",
     "styled-components": "^6.1.3",
@@ -38,6 +39,7 @@
     "@types/numeral": "^2.0.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-scroll-sync": "^0.9.0",
     "@types/uuid": "^9.0.6",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
