--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "copy-to-clipboard": "^3.3.3",
     "date-fns": "^2.30.0",
     "lodash-es": "^4.17.21",
-    "next": "13.5.6",
+    "next": "^14.2.5",
     "next-sitemap": "^4.2.3",
+    "numeral": "^2.0.6",
     "react": "^18",
     "react-calendar": "^4.6.1",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18",
     "react-modal": "^3.16.1",
+    "react-scroll-sync": "^0.11.2",
     "recoil": "^0.7.7",
     "sharp": "^0.33.1",
     "styled-components": "^6.1.3",
@@ -34,8 +36,10 @@
   "devDependencies": {
     "@types/lodash-es": "^4.17.10",
     "@types/node": "^20",
+    "@types/numeral": "^2.0.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-scroll-sync": "^0.9.0",
     "@types/uuid": "^9.0.6",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
